# k-template

./: Cargo.toml  Dockerfile  README.md  cargo-generate.toml  compose.yml
api/: Cargo.toml
api/src/: auth.rs  config.rs  dto.rs  error.rs  main.rs  state.rs
api/src/routes/: auth.rs  config.rs
domain/: Cargo.toml
domain/src/: entities.rs  errors.rs  lib.rs  repositories.rs  services.rs  value_objects.rs
infra/: Cargo.toml
infra/src/: db.rs  factory.rs  lib.rs  session_store.rs  user_repository.rs
infra/src/auth/: mod.rs
migrations_postgres/: 20240101000000_init_users.sql
migrations_sqlite/: 20240101000000_init_users.sql
template-api/: Cargo.toml
template-api/src/: auth.rs  config.rs  error.rs  main.rs  state.rs
template-api/src/routes/: auth.rs  mod.rs
template-domain/: Cargo.toml
template-infra/: Cargo.toml
template-infra/src/: db.rs  factory.rs  user_repository.rs
