[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite", "broker-nats"]
sqlite = [
    "sqlx/sqlite",
    "k-core/sqlite",
    "tower-sessions-sqlx-store",
    "k-core/sessions-db",
]
postgres = [
    "sqlx/postgres",
    "k-core/postgres",
    "tower-sessions-sqlx-store",
    "k-core/sessions-db",
]
broker-nats = ["dep:futures-util", "k-core/broker-nats"]
auth-axum-login = ["dep:axum-login", "dep:password-auth"]

[dependencies]
k-core = { git = "https://git.gabrielkaszewski.dev/GKaszewski/k-core", features = [
    "logging",
    "db-sqlx",
    "sessions-db",
] }
domain = { path = "../domain" }

async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "migrate"] }
thiserror = "2.0.17"
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tower-sessions-sqlx-store = { version = "0.15.0", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-nats = { version = "0.45", optional = true }
futures-util = { version = "0.3", optional = true }
futures-core = "0.3"
tower-sessions = "0.14"

# Auth dependencies (optional)
axum-login = { version = "0.18", optional = true }
password-auth = { version = "1.0", optional = true }
